tests/paczka1/fuzzy1/79985751.err
Error in line 11: S146 A143 -1,6
Error in line 7: O1XlSGlnQ0 A720 43,7
Error in line 12: 8w1 A143 72,5
Error in line 25: S146 S146 96,4
Error in line 27: S146 A720 25,6
Error in line 37: pcDJWuS S146 60,7
